# pyparallel

./: .gitattributes  .gitignore  .gitmodules  .hgignore  .hgtags  README  README.md  _px.bat  _pxd.bat  _pyparallel.bat  _pyparallel_d.bat  _tefb.bat  _tefbd.bat  index.html  params.json  px-http-server.bat  px.bat  pxd-http-server.bat  pxd.bat  pxdv.bat  pyparallel.bat  pyparallel_d.bat  pyparallel_pgi.bat  pyparallel_pgo.bat  python33-http-server.bat  tefb.bat  tefbd.bat  timeit-snippets.txt  update_ctags.sh
Doc/: make.bat
Doc/whatsnew/: 3.3-px.rst  index.rst
Include/: Python.h  bytearrayobject.h  bytesobject.h  ceval.h  classobject.h  code.h  datetime.h  dictobject.h  fileio.h  object.h  objimpl.h  patchlevel.h  picohttpparser.h  pxlist.h  pxthreadobject.h  pxtimerobject.h  py_curses.h  pyerrors.h  pyintrinsics.h  pymacro.h  pymem.h  pyparallel.h  pyparallel_http.h  pyparallel_odbc.h  pyparallel_util.h  pyport.h  pystate.h  pythonrun.h  serial.h  statics.h  uthash.h  weakrefobject.h
Lib/: _pyparallel_util.py  async.py  datrie.pyd  tqdm.py
Lib/async/: __init__.py  scratch.py  services.py  socket.py  socketserver.py
Lib/ctk/: __init__.py  cli.py  command.py  commandinvariant.py  config.py  debug.py  example_commands.py  invariant.py  logic.py  path.py  pipe_win32.py  progressbar.py  util.py
Lib/distutils/: msvc9compiler.py
Lib/idlelib/: PyShell.py
Lib/importlib/: _bootstrap.py
Lib/json/: __init__.py
Lib/logging/: __init__.py
Lib/parallel/: __init__.py
Lib/px/: command.py  commands.py  config.py
Lib/sqlite3/: __init__.py
Lib/techempower_frameworks_benchmark/: __init__.py  commands.py  config.py
Lib/test/: test_async.py  test_parallel.py
Lib/windows/: __init__.py
Modules/: _datetimemodule.c  _freeze_importlib.c  _json.c  atexitmodule.c  gcmodule.c  getbuildinfo.c  main.c  posixmodule.c  signalmodule.c  socketmodule.c  socketmodule.h
Modules/_ctypes/: malloc_closure.c
Modules/_io/: iobase.c
Modules/_sqlite/: connection.c
Objects/: abstract.c  bytearrayobject.c  bytesobject.c  classobject.c  codeobject.c  dictobject.c  exceptions.c  floatobject.c  frameobject.c  funcobject.c  genobject.c  listobject.c  longobject.c  methodobject.c  object.c  obmalloc.c  pxthreadobject.c  pxtimerobject.c  setobject.c  sliceobject.c  tupleobject.c  typeobject.c  unicodeobject.c  weakrefobject.c
PC/: getpathp.c  invalid_parameter_handler.c  pyconfig.h  python_nt.rc  pythonnt_rc.h  pythonnt_rc_d.h
PC/VS7.1/: pythoncore.vcproj
PC/VS8.0/: _multiprocessing.vcproj  bz2.vcproj  pythoncore.vcproj
PC/VS9.0/: pcbuild.sln
PCbuild/: _bz2.vcxproj  _ctypes.vcxproj  _ctypes_test.vcxproj  _decimal.vcxproj  _elementtree.vcxproj  _freeze_importlib.vcxproj  _hashlib.vcxproj  _lzma.vcxproj  _msi.vcxproj  _multiprocessing.vcxproj  _socket.vcxproj  _sqlite3.vcxproj  _ssl.vcxproj  _testbuffer.vcxproj  _testcapi.vcxproj  _tkinter.vcxproj  bdist_wininst.vcxproj  build_ssl.py  cython.props  datrie.props  datrie.vcxproj  datrie.vcxproj.filters  kill_python.vcxproj  make_buildinfo.c  make_buildinfo.vcxproj  make_versioninfo.vcxproj  pcbuild.sln  pxodbc.props  pxodbc.vcxproj  pxodbc.vcxproj.filters  pyexpat.vcxproj  pylauncher.vcxproj  pyodbc.props  pyodbc.vcxproj  pyodbc.vcxproj.filters  pyproject.props  python.vcxproj  pythoncore.vcxproj  pythoncore.vcxproj.filters  pythonw.vcxproj  (+7 more)
PCbuild/amd64/: px.py
Parser/: myreadline.c
Python/: JSONtoObj.c  ceval.c  ceval_gil.h  errors.c  fileutils.c  importdl.c  importlib.h  objToJSON.c  parallelmodule.c  picohttpparser.c  pxlist.c  pyparallel.c  pyparallel_http.c  pyparallel_private.h  pystate.c  pythonrun.c  sigcheck.c  statics.c  sysmodule.c  thread_nt.h  ujson.c  ujson_py_defines.h
Scripts/: cygdb-script.py  cython-script.py  cythonize-script.py  easy_install-3.3-script.py  easy_install-script.py  f2py.py  f2py_d.py  idle-script.py  iptest-script.py  iptest3-script.py  ipython-script.py  ipython3-script.py  jsonschema-script.py  jupyter-console-script.py  jupyter-kernelspec-script.py  jupyter-migrate-script.py  jupyter-nbconvert-script.py  jupyter-nbextension-script.py  jupyter-notebook-script.py  jupyter-qtconsole-script.py  jupyter-script.py  jupyter-trust-script.py  pip-script.py  pygmentize-script.py
Tools/buildbot/: build-amd64.bat  build.bat  buildmsi.bat  external-amd64.bat  tcltk-release-amd64.bat  tcltk-release.bat
Tools/msi/: .gitignore  config.py  msi.py  msilib.py
Tools/pyparallel/: README.txt  px-http-server.bat  px.bat  python33-http-server.bat  tefb.bat
conf/: px.conf
contrib/datrie/: .gitignore  .hgignore  .hgtags  .travis.yml  CHANGES.rst  MANIFEST.in  README.rst  appveyor.yml  setup.py  tox.ini  update_c.bat  update_c.sh
contrib/datrie/libdatrie/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.migration  autogen.sh  configure.ac  datrie-0.2.pc.in
contrib/datrie/libdatrie/datrie/: Makefile.am  alpha-map-private.h  alpha-map.c  alpha-map.h  darray.c  darray.h  dstring-private.h  dstring.c  dstring.h  fileutils.c  fileutils.h  libdatrie.def  libdatrie.map  tail.c  tail.h  trie-private.h  trie-string.c  trie-string.h  trie.c  trie.h  triedefs.h  typedefs.h
contrib/datrie/libdatrie/doc/: Doxyfile.in  Makefile.am
contrib/datrie/libdatrie/man/: Makefile.am  trietool-0.2.1
contrib/datrie/libdatrie/tests/: Makefile.am  test_file.c  test_iterator.c  test_nonalpha.c  test_null_trie.c  test_store-retrieve.c  test_walk.c  utils.c  utils.h
contrib/datrie/libdatrie/tools/: Makefile.am  trietool.c
contrib/pyodbc/: MANIFEST.in
contrib/windows/: __init__.pxd  _adv.h  _avrt.c  _avrt.h  _gdiplus.cpp  _gdiplus.h  _loader.c  _wdm.h  adv.c  adv.pxd  adv.pxi  adv.pyx  avrt.c  avrt.pxd  avrt.pyx  base.c  base.c.orig  base.h  base.html  base.pxd  base.pyx  constants.c  constants.pxd  constants.pyx  ddk.pxd  error.c  error.h  error.html  error.pxd  error.pyx  file.pxd  gdi.pxd  gdiplus.cpp  gdiplus.pxd  gdiplus.pyx  http.c  http.pxd  http.pyx  io.pxd  ioctl.pxd  (+40 more)
diffs/: .gitignore.patch  .hgignore.patch  .hgtags.patch  README.patch
diffs/Doc/: make.bat.patch
diffs/Include/: Python.h.patch  (+17 more)
(+136 files in other folders)
